Adding CSS file

--- a/activityOne.html
+++ b/activityOne.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 1 Exercise</title>
+    <link rel="stylesheet" href="activityOne.css">
 </head>
 <body>
     <h1>
@@ -52,43 +53,5 @@
     <button>Back</button>
     <a href="">1</a> <a href="">2</a> <a href="">3</a> <a href="">4</a> <a href="">5</a>
     <button>Next</button>
-
-    <style>
-        .actNo {
-            color: green;
-        }
-        .botOne {
-            padding: 8px;
-            padding-left: 10px;
-            padding-right: 10px;
-            margin-right: 10px;
-            background-color: rgb(46, 164, 79);
-            color: white;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        .botOne:hover {
-            opacity: 78%;
-        }
-
-        .botTwo {
-            padding: 8px;
-            padding-left: 10px;
-            padding-right: 10px;
-            margin-left: 10px;
-            background-color: rgb(46, 164, 79);
-            color: white;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-            transition: opacity 0.28s;
-        }
-        .botTwo:hover {
-            opacity: 78%;
-        }
-
-    </style>
-
 </body>
 </html>
