--- a/activityOne.html
+++ b/activityOne.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 1 Exercise</title>
+    <title>Lesson 1 Activity</title>
     <link rel="stylesheet" href="activityOne.css">
 </head>
 <body>
