Lesson 5&6: Activity - Done!

--- a/FrontPageCourse.html
+++ b/FrontPageCourse.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="MainPage.css">
 </head>
 <body>
-    <h1>Main Page</h1>
+    <h1>Project Exercise</h1>
     <h3>This is the main page of the HTML & CSS Course.</h3>
+
+    <a href="activityOne.html" target="_blank">
+        <button class="lesson">Lesson 1</button>
+    </a>
+    <br>
+    <a href="activityTwo.html" target="_blank">
+        <button class="lesson">Lesson 2</button>
+    </a>
+    <br>
+    <a href="activityThree.html" target="_blank">
+        <button class="lesson">Lesson 3</button>
+    </a>
+    <br>
+    <a href="activityFour.html" target="_blank">
+        <button class="lesson">Lesson 4</button>
+    </a>
+    <br>
+    <a href="activityFive.html" target="_blank">
+        <button class="lesson">Lesson 5</button>
+    </a>
+
 </body>
 </html>
