New Activities added

--- a/FrontPageCourse.html
+++ b/FrontPageCourse.html
@@ -10,25 +10,29 @@
     <h1>Project Exercise</h1>
     <h3>This is the main page of the HTML & CSS Course.</h3>
 
-    <a href="activityOne.html" target="_blank">
+    <p>
+        <a href="/Lesson 1/activityOne.html" target="_blank">
         <button class="lesson">Lesson 1</button>
-    </a>
-    <br>
-    <a href="activityTwo.html" target="_blank">
-        <button class="lesson">Lesson 2</button>
-    </a>
-    <br>
-    <a href="activityThree.html" target="_blank">
-        <button class="lesson">Lesson 3</button>
-    </a>
-    <br>
-    <a href="activityFour.html" target="_blank">
-        <button class="lesson">Lesson 4</button>
-    </a>
-    <br>
-    <a href="activityFive.html" target="_blank">
-        <button class="lesson">Lesson 5</button>
-    </a>
+        </a>
+        <a href="Lesson 2/activityTwo.html" target="_blank">
+            <button class="lesson">Lesson 2</button>
+        </a>
+        <a href="Lesson 3/activityThree.html" target="_blank">
+            <button class="lesson">Lesson 3</button>
+        </a>
+        <a href="Lesson 4/activityFour.html" target="_blank">
+            <button class="lesson">Lesson 4</button>
+        </a>
+    </p>
 
+    <p>
+        <a href="Lesson 5/activityFive.html" target="_blank">
+            <button class="lesson">Lesson 5</button>
+        </a>
+        <a href="Lesson 6/activitySix.html" target="_blank">
+            <button class="lesson">Lesson 6</button>
+        </a>
+    </p>
+    
 </body>
 </html>
