--- a/Lesson 6/activitySix.html
+++ b/Lesson 6/activitySix.html
@@ -3,19 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 6 Activity</title>
-    <link rel="stylesheet" href="activitySix.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+    <title>Lesson 6 Activity</title>
+    <link rel="stylesheet" href="activitySix.css">
+    
 </head>
 <body>
-    <p class="mod">
-        Model 3
-    </p>
+    <h1>Lesson 6: Activities</h1>
+    <h3>Images and Text Boxes. For these exercises, find any .jpg .png or .webp image on the internet to practice with:</h3>
 
-    <p>
-        Order Online for <u>Touchless Delivery</u>
+    <!-- 6a. Rounded corners -->
+     <p>6a. Load the image, set width to 200px and add rounded corners</p>
+    <img class="round" src="JennieKim.jpg" alt="nini">
+
+    <!-- 6b. Square -->
+     <p>6b. Make the image a square, center the image within the square</p>
+    <img class="square" src="Nini.jpg" alt="Jennie">
+
+    <!-- 6c. Circle -->
+     <p>6c. Make the image a Circle (use border-radius)</p>
+    <img class="circle" src="JennieKim.jpg" alt="nini again">
+
+    <!-- 6d. Textbox: Round -->
+     <p>6d. Textbox: with Rounded corners</p>
+    <input class="searchBar" type="text" placeholder="Search">
+
+    <!-- 6e. Shadow; no border -->
+     <p>6e. With a shadow and no border</p>
+    <input class="google" type="text" placeholder="Search Google or type a URL">
+
+    <!-- 6f. LinkedIn sign up -->
+     <p>6f. LinkedIn sign up</p>
+    <p class="e">
+        Email
+    </p>
+    <input class="mail" type="email">
+    <p class="e">
+        By clicking Agree & Join, you agree to the Privacy Policy.
+    </p>
+    <button class="agree">
+        Agree & Join
+    </button>
+
+    <!-- 6g. Twitter text box -->
+     <p>6g. Twitter text box</p>
+    <p class="tots">
+        <img class="icon" src="JennieKim.jpg" alt="niniTwo">
+        What's happening?
+        <button class="tweet">
+        Tweet
+    </button>
     </p>
 </body>
 </html>
