Finished Modal activity

--- a/Lesson 13/activityErteen.html
+++ b/Lesson 13/activityErteen.html
@@ -34,7 +34,34 @@
     <!-- 13c. position fixed -->
      <p>13c. Create an element that covers the entire page (0px on all sides) and has background-color black</p>
     <div class="blackElement">
-        full screen
+        full screen (the style is commented)
+    </div>
+
+    <!-- 13d. position fixed -->
+     <p>13b. Create a modal</p>
+     <ul>
+        <li>create an element that covers the entire page, with background-color: rgba(0,0,0, 0.8); = overlay</li>
+        <li>make the overlay a flexbox and center its content horizontally and vertically</li>
+        <li>add a 'div' in the overlay and create the modal</li>
+     </ul>
+
+    <div class="modalBG">
+
+        <div class="modalBox">
+            <div class="modalTitle">
+                Modal Title
+            </div>
+            <div class="modalDesc">
+                This is a modal
+            </div>
+            <div class="modalBtn">
+                <button class="closeBtn">
+                    close
+                </button>
+            </div>
+            
+        </div>
+
     </div>
 
 </body>
